public/css/style.css
/* styling for footer across all 3 pages */
.footer-span {
  color: white;
}

footer {
  z-index: 1;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
}

.welcome-text {
  font-family: "Anton", sans-serif;
}

.theme-palette {
 background-color: #FFC482;
}

.form-input{
  width: 100%
}

.login-btn{
  background-color: #E29578;
  color: white
}

.navbar-brand {
  padding-left: 15px;
}

#nav-menu{
  padding-left: 15px;
  padding-right: 15px;
}

